@@ -1,4 +1,5 @@
 - default to UTF-8 for chinese simplified (#42137)
+- new desktop choice screen
 
 Version 11.7 - 11 August 2008
 
